tests/NormalTests/paczka1/fuzzy1/18587769.err
Error in line 1: ikx3pVSaqJ S385 8,2
Error in line 7: gISdLY A654 6,8
Error in line 9: gISdLY S517 85,7
Error in line 11: GHltR A40 10,8
Error in line 22: awLIP A40 69,5
Error in line 32: gISdLY A654 71,4
Error in line 30: CsRCCXkle6 A40 19,1
Error in line 13: GHltR A654 36,9
Error in line 34: gISdLY A659 202,1
